--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="right card">
             <img class="tile-image" src="assets/images/ThursdayRun.jpg" alt="group of runners outside of a brewery">
             <h3 class="title">Thursday Group Run</h2>
-            <p class="description">Joins us at Millernial brewery every Thusday at 6:15pm. We through run the downtown area, including the Edison Bridge in order to get in our weekly "hill workout". Enjoy a discount on Millenial brewery Beers after the run. There is also a food truck if you get hungry after your run. All levels are welcome on this run. We usually do a 5k. Some do less or more. All paces are welcome.</p>
+            <p class="description">Joins us at Millernial brewery every Thusday at 6:15pm. We run through the downtown area, including the Edison Bridge in order to get in our weekly "hill workout". Enjoy a discount on Millenial brewery Beers after the run. There is also a food truck if you get hungry after your run. All levels are welcome on this run. We usually do a 5k. Some do less or more. All paces are welcome.</p>
         </div>
     </div>
 
