--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="left card">
             <img class="tile-image" src="assets/images/MondayRun.jpg" alt="group of runners in a shoe store">
             <h3 class="title">Monday Group Run</h2>
-            <p class="description">Joins us at Fleet Feet Fort Myers every Monday at 6:30 pm for a 5k run through the John Yarbrough Linear Park. We usually hang out at Burntwood Tavern afterwards. All levles are welcome!</p>
+            <p class="description">Joins us at Fleet Feet Fort Myers every Monday at 6:30 pm for a 5k run through the John Yarbrough Linear Park. We usually hang out at Burntwood Tavern afterwards. All levels are welcome!</p>
         </div>
         <div class="right card">
             <img class="tile-image" src="assets/images/ThursdayRun.jpg" alt="group of runners outside of a brewery">
